Visit header design is done

--- a/src/app/components/dashboard/content/patient-visit/visit-header/visit-header.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-header/visit-header.component.html
@@ -1,1 +1,41 @@
-<p>visit-header works!</p>
+<div class="main-container">
+    <div class="option selected">
+        <div class="center-v">
+            <i class="fa fa-sliders-h"></i>
+        </div>
+        <span> General</span>
+    </div>
+    <div class="option">
+        <div class="center-v">
+            <i class="fa fa-stethoscope"></i>
+        </div>
+        <span> Diagnostique</span>
+    </div>
+
+    <div class="option">
+        <div class="center-v">
+            <i class="fa fa-prescription-bottle-alt"></i>
+        </div>
+        <span> Ordonnance</span>
+    </div>
+
+
+    <div class="option">
+        <div class="center-v">
+            <i class="fa fa-vials"></i>
+        </div>
+        <span> Bilan</span>
+    </div>
+    <div class="option">
+        <div class="center-v">
+            <i class="fa fa-envelope-open-text"></i>
+        </div>
+        <span>Courrier</span>
+    </div>
+    <div class="option">
+        <div class="center-v">
+            <i class="fa fa-file-medical-alt"></i>
+        </div>
+        <span>Documents</span>
+    </div>
+</div>
