--- a/src/app/components/dashboard/content/patient-visit/visit-header/visit-header.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-header/visit-header.component.html
@@ -1,5 +1,5 @@
 <div class="main-container">
-    <div class="option selected">
+    <div class="option" [class.selected]="selectedPage ==1" (click)="select(1)">
         <div class="center-v">
             <i class="fa fa-sliders-h"></i>
         </div>
@@ -12,7 +12,7 @@
         <span> Diagnostique</span>
     </div>
 
-    <div class="option">
+    <div class="option" [class.selected]="selectedPage ==3" (click)="select(3)">
         <div class="center-v">
             <i class="fa fa-prescription-bottle-alt"></i>
         </div>
@@ -20,19 +20,19 @@
     </div>
 
 
-    <div class="option">
+    <div class="option" [class.selected]="selectedPage ==4" (click)="select(4)">
         <div class="center-v">
             <i class="fa fa-vials"></i>
         </div>
         <span> Bilan</span>
     </div>
-    <div class="option">
+    <div class="option" [class.selected]="selectedPage ==5" (click)="select(5)">
         <div class="center-v">
             <i class="fa fa-envelope-open-text"></i>
         </div>
         <span>Courrier</span>
     </div>
-    <div class="option">
+    <div class="option" [class.selected]="selectedPage ==6" (click)="select(6)">
         <div class="center-v">
             <i class="fa fa-file-medical-alt"></i>
         </div>
