--- a/src/app/components/dashboard/content/patient-visit/patient-visit.component.html
+++ b/src/app/components/dashboard/content/patient-visit/patient-visit.component.html
@@ -1,6 +1,20 @@
 <div class="main-container">
     <app-header></app-header>
     <div class="content">
-        <app-visit-header></app-visit-header>
+        <app-visit-header (selectPageEvent)="select($event)"></app-visit-header>
+        <div class="pages">
+            <div class="page" *ngIf="page == 1">
+                <app-visit-information></app-visit-information>
+            </div>
+            <div class="page" *ngIf="page == 3">
+                <app-visit-prescription></app-visit-prescription>
+            </div>
+            <div class="page" *ngIf="page == 4">
+                <app-visit-check-up></app-visit-check-up>
+            </div>
+            <div class="page" *ngIf="page == 6">
+                <app-visit-documents></app-visit-documents>
+            </div>
+        </div>
     </div>
 </div>
