Visit Loader done

--- a/src/app/components/dashboard/content/patient-visit/visit-information/visit-information.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-information/visit-information.component.html
@@ -1,7 +1,9 @@
 <div class="main-container">
+
     <div class="row">
-        <div class="col col-md-5">
-            <app-new-visit></app-new-visit>
+        <div class="col col-md-4">
+            <app-visit-loader [visit]="visit"></app-visit-loader>
         </div>
     </div>
+
 </div>
