--- a/src/app/components/dashboard/content/waiting-room/new-visit/new-visit.component.html
+++ b/src/app/components/dashboard/content/waiting-room/new-visit/new-visit.component.html
@@ -36,9 +36,7 @@
                         <span>
                             {{medicalAct.price}} DA
                         </span>
-                        <i class="fa fa-check">
-                        
-                        </i>
+                        <i class="fa fa-check"></i>
                     </div>
                 </div>
                 <p>
