--- a/src/styles.css
+++ b/src/styles.css
@@ -91,3 +91,19 @@ h5.card-title {
     background: rgb(38, 94, 215);
     color: white;
 }
+
+select {
+    background: white;
+    padding: 10px 16px;
+    width: 100%;
+    border: none;
+    color: #212121;
+    border: #cccccc solid 1px;
+    border-radius: 8px;
+    outline: none;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
