Clincal Exam design done

--- a/src/app/components/dashboard/content/patient-visit/visit-information/visit-clincal-exam/visit-clincal-exam.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-information/visit-clincal-exam/visit-clincal-exam.component.html
@@ -1,1 +1,7 @@
-<p>visit-clincal-exam works!</p>
+<div class="main-container primary-radius">
+    <h5>Examen Clinique</h5>
+    <p>
+        Charger un examen predefiné <i class="fa fa-file-medical-alt"></i>
+    </p>
+    <textarea [(ngModel)]="exam" placeholder="Examen clinique"></textarea>
+</div>
