--- a/src/app/components/dashboard/content/patient-visit/visit-information/visit-information.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-information/visit-information.component.html
@@ -4,6 +4,9 @@
         <div class="col col-md-4">
             <app-visit-loader [visit]="visit"></app-visit-loader>
         </div>
+        <div class="col col-md-4">
+            <app-visit-clincal-exam [exam]="visit.clinicalExam"></app-visit-clincal-exam>
+        </div>
     </div>
 
 </div>
