--- a/src/app/components/dashboard/content/waiting-room/new-visit/vital-setting/vital-setting.component.html
+++ b/src/app/components/dashboard/content/waiting-room/new-visit/vital-setting/vital-setting.component.html
@@ -58,7 +58,7 @@
                 La Pression artérielle
             </div>
             <div class="input-container ">
-                <input type="text " [(ngModel)]="vitalSetting.bloodPressure" placeholder="pression " class="primary-input ">
+                <input type="number" [(ngModel)]="vitalSetting.bloodPressure" placeholder="pression " class="primary-input ">
             </div>
             <div class="unite-container ">
                 mmHg
@@ -73,7 +73,7 @@
                 La diurèse
             </div>
             <div class="input-container ">
-                <input type="text " class="primary-input" [(ngModel)]="vitalSetting.diuresis" placeholder="diurèse">
+                <input type="number" class="primary-input" [(ngModel)]="vitalSetting.diuresis" placeholder="diurèse">
             </div>
             <div class="unite-container ">
                 ml
@@ -91,7 +91,7 @@
                 Poids
             </div>
             <div class="input-container ">
-                <input type="text" class="primary-input" [(ngModel)]="vitalSetting.weight" placeholder="Poids ">
+                <input type="number" class="primary-input" [(ngModel)]="vitalSetting.weight" placeholder="Poids ">
             </div>
             <div class="unite-container ">
                 KG
@@ -106,7 +106,7 @@
                 Taille
             </div>
             <div class="input-container ">
-                <input type="text " class="primary-input " placeholder="Taille " [(ngModel)]="vitalSetting.size">
+                <input type="number" class="primary-input" placeholder="Taille " [(ngModel)]="vitalSetting.size">
             </div>
             <div class="unite-container ">
                 cm
