--- a/src/styles.css
+++ b/src/styles.css
@@ -107,3 +107,12 @@ select {
     -webkit-appearance: none;
     -moz-appearance: none;
 }
+
+.hightlight {
+    background: rgba(254, 101, 85, 0.3);
+    color: rgb(254, 101, 85);
+    padding: 4px 8px;
+    border-radius: 20px;
+    margin-left: 8px;
+    font-size: 10px;
+}
