--- a/src/app/components/diagnosis/patient-info/patient-info.component.html
+++ b/src/app/components/diagnosis/patient-info/patient-info.component.html
@@ -1,29 +1,29 @@
 <div class="patient-info-container stretch-container">
     <div class="name-icon-container">
         <div class="icon-container">
-            <span>{{patient.lastname[0]}}</span>
+            <span>{{visit.medicalFile.lastname[0]}}</span>
         </div>
     </div>
     <div class="info-container">
         <div class="row">
-            <div class="col col-md-4 center-v">
+            <div class="col col-md-4 center-v primary-col">
                 <div class="lastname-name">
-                    <h5>{{patient.lastname}} {{patient.name}}</h5>
-                    <p>{{patient.birthday}}</p>
+                    <h5>{{visit.medicalFile.lastname}} {{visit.medicalFile.name}}</h5>
+                    <p>{{visit.medicalFile.birthday}}</p>
                 </div>
             </div>
-            <div class="col col-md-8">
+            <div class="col col-md-8 primary-col center-v">
                 <div class="row info-row">
                     <div class="col col-md-6">
-                        <p class="info"><i class="fa fa-weight"></i> <span>{{patient.weight}} Kg </span> </p>
+                        <p class="info"><i class="fa fa-weight"></i> <span>{{visit.vitalSetting.weight}} Kg </span> </p>
                     </div>
                     <div class="col col-md-6">
-                        <p class="info"><i class="fa fa-arrows-alt-v"></i> <span>{{patient.height}} cm </span></p>
-
+                        <p class="info"><i class="fa fa-arrows-alt-v"></i> <span>{{visit.vitalSetting.size}} cm </span></p>
                     </div>
                     <div class="col col-md-6">
                         <p class="info">Age : <span>{{age}} ans</span> </p>
                     </div>
+
                     <div class="col col-md-6">
                         <p class="info">IMC : <span>{{imc}} kg / m2</span> </p>
                     </div>
