--- a/src/app/components/dashboard/content/patient-visit/visit-header/visit-header.component.css
+++ b/src/app/components/dashboard/content/patient-visit/visit-header/visit-header.component.css
@@ -11,6 +11,7 @@
     color: #666666;
     cursor: pointer;
     transition-duration: 0.5s;
+    position: relative;
 }
 
 .option:hover {
@@ -31,4 +32,36 @@
 
 .main-container {
     margin: 0px -16px;
+}
+
+.drop-down {
+    position: absolute;
+    background: white;
+    top: 29px;
+    box-shadow: 2px 2px 16px rgba(0, 0, 0, 0.1);
+    z-index: 2;
+    width: 260px;
+    padding: 8px;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 8px;
+    display: none;
+    opacity: 0;
+}
+
+.drop-down-option span {
+    padding: 8px 16px;
+    color: #666666;
+    border-radius: 8px;
+}
+
+.drop-down-option span:hover {
+    background: rgb(38, 94, 215);
+    color: white;
+}
+
+.drop-down-hover:hover .drop-down,
+.drop-down-hover:hover .custom-caret {
+    display: block;
+    opacity: 1;
 }
