--- a/src/app/components/dashboard/content/patient-visit/visit-header/visit-header.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-header/visit-header.component.html
@@ -5,11 +5,23 @@
         </div>
         <span> General</span>
     </div>
-    <div class="option">
+    <div class="option drop-down-hover">
         <div class="center-v">
             <i class="fa fa-stethoscope"></i>
         </div>
         <span> Diagnostique</span>
+        <div class="drop-down">
+            <div class="drop-down-option">
+                <a (click)="openDiagnosis()">
+                    <span>Diagnostique symptomatique</span>
+                </a>
+            </div>
+            <div class="drop-down-option">
+                <a [queryParams]="{'pop-up-window' : true , 'window-page' : 'speciality-diagnosis' , 'title' : 'Diagnostic symptomatique'}" [routerLink]="">
+                    <span>Diagnostique Avances</span>
+                </a>
+            </div>
+        </div>
     </div>
 
     <div class="option" [class.selected]="selectedPage ==3" (click)="select(3)">
