--- a/src/app/components/dashboard/content/waiting-room/new-medical-file/antecedents-submitter/antecedents-submitter.component.html
+++ b/src/app/components/dashboard/content/waiting-room/new-medical-file/antecedents-submitter/antecedents-submitter.component.html
@@ -1,30 +1,30 @@
 <div class="main-container">
-    <div class="row">
-        <div class="col col-md-6">
-            <app-search-input [searchFunction]="searchFunction" (searchSubmitted)="addAntecedent()" [submittedItem]="submittedAntecedent" [placeholder]="'Recherché un antecdent'"></app-search-input>
-        </div>
-        <div class="col col-md-3">
-            <select [(ngModel)]="submittedAntecedent.type">
-                <option [value]="undefined" hidden>Type</option>
-                <option *ngFor="let type of types" [value]="type" >{{type}}</option>
-            </select>
-        </div>
-        <div class="col col-md-3">
-            <div class="icon-container">
-                <i class="fa fa-plus" (click)="addAntecedent()"></i>
+    <h5>
+        Gestion des antecedents <i class="fa fa-times" (click)="closeEvent.emit()"></i>
+    </h5>
+    <div class="stretch-container">
+        <div class="types">
+            <div class="type" *ngFor="let type of types" (click)="submittedAntecedent.type = type" [class.selected]="submittedAntecedent.type == type">
+                {{type}}
+            </div>
+            <div class="type" [class.selected]="submittedAntecedent.type == null" (click)="submittedAntecedent.type = null">
+                Autre
             </div>
         </div>
-    </div>
-    <div class="list">
-        <div class="antecedent stretch-container" *ngFor="let antecedent of antecedents">
-            <div class="name">
-                {{antecedent.name}}
+        <div class="submitter">
+            <div class="submitter-input">
+                <app-search-input [searchFunction]="searchFunction" (searchSubmitted)="addAntecedent()" [submittedItem]="submittedAntecedent" [placeholder]="'Recherché un antecdent'"></app-search-input>
             </div>
-            <div class="type">
-                {{(antecedent.type) ? (antecedent.type) : ("Inconnue")}}
-            </div>
-            <div class="icon-container">
-                <i class="fa fa-trash" (click)="deleteAntecedent(antecedent)"></i>
+            <div class="antecedent stretch-container" *ngFor="let antecedent of getAntecedents()">
+                <div class="name">
+                    {{antecedent.name}}
+                </div>
+                <div class="ant-type">
+                    {{(antecedent.type) ? (antecedent.type) : ("Inconnue")}}
+                </div>
+                <div class="icon-container">
+                    <i class="fa fa-trash" (click)="deleteAntecedent(antecedent)"></i>
+                </div>
             </div>
         </div>
     </div>
