--- a/src/app/components/dashboard/content/patient-visit/visit-information/visit-vital-setting/visit-vital-setting.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-information/visit-vital-setting/visit-vital-setting.component.html
@@ -131,7 +131,7 @@
                     <p>Modifier les paramétres vitaux ici </p>
 
                 </div>
-                <button class="secondary-button">Modifier <i class="fa fa-edit"></i></button>
+                <button (click)="openVitalSetting()" class="secondary-button">Modifier <i class="fa fa-edit"></i></button>
             </div>
         </div>
 
