--- a/src/app/components/global/pop-up-window/pop-up-window.component.html
+++ b/src/app/components/global/pop-up-window/pop-up-window.component.html
@@ -14,5 +14,6 @@
         <app-medical-act-submitter *ngIf="windowPage =='medical-act-submitter'" (closeEvent)="close()"></app-medical-act-submitter>
         <app-new-visit *ngIf="windowPage == 'new-visit'" (closeEvent)="close()"></app-new-visit>
         <app-paye-visit *ngIf="windowPage == 'paye-visit'" (closeEvent)="close()"></app-paye-visit>
+        <app-vital-setting *ngIf="windowPage == 'vital-setting'" (closeEvent)="close()"></app-vital-setting>
     </div>
 </div>
