--- a/src/app/components/global/pop-up-window/pop-up-window.component.html
+++ b/src/app/components/global/pop-up-window/pop-up-window.component.html
@@ -15,5 +15,6 @@
         <app-new-visit *ngIf="windowPage == 'new-visit'" (closeEvent)="close()"></app-new-visit>
         <app-paye-visit *ngIf="windowPage == 'paye-visit'" (closeEvent)="close()"></app-paye-visit>
         <app-vital-setting *ngIf="windowPage == 'vital-setting'" (closeEvent)="close()"></app-vital-setting>
+        <app-clincal-exam-manager *ngIf="windowPage == 'clincal-exam-manager'" (closeEvent)="close()"></app-clincal-exam-manager>
     </div>
 </div>
