--- a/src/app/components/dashboard/content/patient-visit/clincal-exam-manager/clincal-exam-list/clincal-exam-list.component.html
+++ b/src/app/components/dashboard/content/patient-visit/clincal-exam-manager/clincal-exam-list/clincal-exam-list.component.html
@@ -1,1 +1,10 @@
-<p>clincal-exam-list works!</p>
+<div class="main-container">
+    <h5>List des examens cliniques</h5>
+    <div class="message stretch-container">
+        <p>Si l'examen que vous cherché n'existe pas </p>
+        <button (click)="addExamEvent.emit()" class="secondary-button">Creé le <i class="fa fa-plus"></i></button>
+    </div>
+    <div class="list">
+        <div class="clinical-exam" *ngFor="let clinicalExam of clinicalExams">{{clinicalExam.name}}</div>
+    </div>
+</div>
