--- a/src/app/components/dashboard/content/patient-visit/visit-information/visit-clincal-exam/visit-clincal-exam.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-information/visit-clincal-exam/visit-clincal-exam.component.html
@@ -1,6 +1,6 @@
 <div class="main-container primary-radius">
     <h5>Examen Clinique</h5>
-    <p>
+    <p (click)="openManager()">
         Charger un examen predefiné <i class="fa fa-file-medical-alt"></i>
     </p>
     <textarea [(ngModel)]="exam" placeholder="Examen clinique"></textarea>
