--- a/src/app/components/dashboard/content/patient-visit/clincal-exam-manager/clincal-exam-list/clincal-exam-list.component.css
+++ b/src/app/components/dashboard/content/patient-visit/clincal-exam-manager/clincal-exam-list/clincal-exam-list.component.css
@@ -33,4 +33,79 @@ h5 {
 .list {
     height: 360px;
     overflow: auto;
+    margin: 16px 0px;
+}
+
+.clinical-exam {
+    margin-bottom: 8px;
+    cursor: pointer;
+}
+
+.exam-header {
+    padding: 4px 8px;
+    border-radius: 4px;
+}
+
+.exam-header:hover {
+    background: #eeeeee;
+}
+
+.fa-edit,
+.fa-trash {
+    float: right;
+    margin: 4px;
+}
+
+.fa-edit {
+    color: rgb(38, 94, 215);
+}
+
+.fa-trash {
+    color: rgb(254, 101, 85);
+}
+
+.fa-sort-down {
+    margin: 4px;
+    margin-right: 8px;
+}
+
+@keyframes expandExam {
+    from {
+        height: 0px;
+    }
+    to {
+        height: 210px;
+    }
+}
+
+.exam {
+    animation: expandExam 0.5s;
+    height: 210px;
+}
+
+.exam p {
+    white-space: pre;
+    padding: 8px;
+    border: 1px solid #eeeeee;
+    border-radius: 4px;
+    height: 100%;
+    position: relative;
+}
+
+p span {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    background: rgb(38, 94, 215);
+    color: white;
+    border-radius: 20px;
+    padding: 4px 16px;
+    font-size: 12px;
+    font-weight: bold;
+    opacity: 0;
+    transition-duration: 0.3s
+}
+
+p:hover span {
+    opacity: 1;
 }
